# simple_rl

./: .envrc  .envrc.bak  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Lost Continent Expedition Cohesive Vision V3.md  MANIFEST.md  PERFORMANCE_ANALYSIS.md  Proposed Software Systems V2 Lost Continent.md  README.md  SAVEGAME_IMPROVEMENTS.md  SYSTEMS_INVENTORY.md  Simple RL Architecture Integration Guide V3.md  TODO_LIGHTS_DEV.md  apply_ai_behavior_refactor.py  apply_perception_refactor.py  backup.sh  brainfuck_numba.py  code_simple_rl.txt  complete_light_diagnostic.py  continent_design.md  core_test_output.json  dungeon_generator.py  environment.yml  find_all_fallbacks.py  find_fallbacks.py  game_rng.py  generated_dungeon.arrow  generated_dungeon.arrow.node_map.json  main.py  orchestrator.py  play_3d_debug.py  play_debug.py  pyproject.toml  quick.arrow  refactor.py  requirements.txt  scripting_engine.py  (+5 more)
.codex/: AGENTS.md  Agents.md
.gemini/: styleguide.md
.github/: copilot-instructions.md
AI/: README.md  v9.py
Dungeon/: README.md  core.py  processor.py  run.sh  run_log.txt  shaper.py
ai/: README.md  v9.py
asm_dev/: README.md
auto/: .style.yapf  README.md  goap_engine.py  main.old  main.py  pyproject.toml  run.sh  simulation.old  simulation.py
bench/: bench_advance_turn.py  bench_fov.py
common/: constants.py  tuning.py  types.py
config/: ai_mappings.yaml  config.yaml  effects.yaml  entities.yaml  items.yaml  keybindings.toml  overlays.toml  sounds.yaml
docs/: ARCHITECTURE.md  ASSET_PIPELINE.md  Architecture.md  Asset Pipeline.md  CHANGELOG.md  COMPLIANCE_REPORT.md  CONFIG_REFERENCE.md  CURRENT_STATUS.md  Compliance Report.md  Config Reference.md  Contributing.md  Current Status.md  DEPRECATION_POLICY.md  Deprecation Policy.md  Engineering.md  Entity Store Migration.md  First Playable Expedition Loop.md  LIGHTING_FOV_MEMORY_STATUS.md  LLM Critical Rules.md  LLM_CRITICAL_RULES.md  Overland Generation.md  Overland Next Steps.md  Overland Roadmap.md  Overland Worldgen Integration.md  PHASE_COMPLETION_SUMMARY.md  Performance Analysis.md  Phase Completion Summary.md  REPOSITORY_AUDIT.md  RUNBOOK.md  Rendering.md  Runbook.md  SAVEGAME_IMPROVEMENTS.md  SKILL_ADVANCED_FEATURES.md  SKILL_SYSTEM_EVALUATION.md  SKILL_SYSTEM_INTEGRATION.md  SKILL_TRAINING_CONTROLS.md  SYSTEMS_INVENTORY.md  Skill Advanced Features.md  Skill System Enhancements.md  Skill System Evaluation.md  (+17 more)
engine/: action_handler.py  glyphs.py  main_loop.py  render_base_layers.py  render_entities.py  render_lighting.py  renderer.py  tileset_loader.py  window_manager.py
fonts/: glyph_name_chart.md  glyphs.yaml  glyphs_report.txt  tree.txt
game/: constants.py  game_state.py  perception.py  perception_events.py
legacy/: dungeon_generator.py  simple_rl.py
lights_dev/: README.md  __init__.py  __main__.py  _numba_fov.py  cli.py  constants.py  demo_dungeon_generator.py  dungeon_data.py  dungeon_generator.py  entities.py  fov.py  game_state.py  generate_varied_test.py  lighting.py  main_game.py  memory.py  renderer.py  runner.py  scent_and_sound_flow.py
magic/: __init__.py  bf_backend.py  brainfuck_numba.py  executor.py  library.py  models.py  wards.py  work_parser.py
notes/: README.md  basicrl_project.txt  code_basicrl.txt  to implement.txt
pathfinding/: README.md  fix.sh  perception_systems.py  test.py
prototypes/: demo_sound_system.py  roaming_entity_demo.py
scratch/: debug_backbone.py
scripts/: check_deterministic_random.py  check_pep585.py  cleanup_typing_imports.py  find_tuning_dupes.py  fix.sh  generate_glyphs.py  glyph_utils.py  modernize_all.sh  run_auto_regression.py  run_cave_demo.sh  sync_llm_policy.py
settlegen/: README.md  __init__.py  environment.yml  pyproject.toml
settlegen/examples/: example_usage.py
settlegen/settlegen/: __init__.py  acceleration.py  algorithms.py  cli.py  config.py  export.py  facilities.py  generator.py  model.py
settlegen/settlegen/renderers/: __init__.py  ascii.py
settlegen/settlegen/ui/: __init__.py  server.py
settlegen/settlegen/ui/static/: app.js  index.html  style.css
settlegen/tests/: test_smoke.py
simple_rl/: __init__.py
simulation/: __init__.py  zone_manager.py
skills/: Concurrency.md  Integration Guide.md  README.md  Skill System Design.md  __init__.py  constants.py  cross_training.py  effects.py  manuals.py  milestones.py  models.py  prerequisites.py  progression.py  registry_integration.py  shapeshifting.py  skill_system_design.md  species_aptitudes.py  synergies.py  system.py  test_parity.py  test_skills.py  utils.py
temp/: temp.md
tests/: conftest.py  debug_bres.py  debug_los.py  test_action_handler_failures.py  test_ai_behavior.py  test_ai_concurrency.py  test_ai_dispatch_entity_ids.py  test_ai_dispatch_fallbacks.py  test_ai_pathfinding.py  test_ai_perception_behavior.py  test_ai_perception_store_iteration.py  test_ai_turn_scenarios.py  test_auto_regression.py  test_brainfuck_numba.py  test_check_deterministic_random.py  test_combat_system.py  test_community_adapter.py  test_core_output.py  test_determinism.py  test_edgecases.py  test_effect_handlers.py  test_first_playable_expedition.py  test_fov.py  test_fov_edge_cases.py  test_fov_visibility.py  test_game_rng_noise_seed.py  test_game_rng_state_roundtrip.py  test_generate_glyphs.py  test_goap_levels.py  test_helpers.py  test_integration.py  test_inventory_capacity.py  test_kernels.py  test_light_fov.py  test_lighting_fov_ambient_spill.py  test_lighting_fov_bleed_corridor.py  test_lighting_fov_corner_occlusion.py  test_lighting_fov_tool_bounds.py  test_lighting_leaks.py  test_lights_dev_color.py  (+42 more)
tools/: fix_fstring_newlines.py  generate_overland.py  generate_settlement.py  inspect_overland.py  ocr_and_update_glyph_chart.py  play_from_arrow.py  play_game.py  sample_variants.py
utils/: Core README.md  README.md  core.py  game_rng.py  helpers.py  logging_utils.py  savegame.py  shaped_map.py
worldgen/: __init__.py  bench.py  chunk_cache.py  config.py  constants.py  game_rng.py  hydrology.py  io.py  metadata.py  report.py  utils_coord.py  (+2 more)
(+341 files in other folders)
