[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-rl"
version = "0.1.0"
description = "Simulation-heavy roguelike/RPG research project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
  "polars>=0.20",
  "numba>=0.57",
  "scipy>=1.10",
  "scikit-image>=0.22",
  "joblib>=1.3",
  "pydantic>=2.0",
  "orjson>=3.8.0",
  "PySide6>=6.5",
  "PySDL2>=0.9.16",
  "pysdl2-dll>=2.30.0",
  "matplotlib>=3.7",
  "Pillow>=9.2",
  "structlog>=23.1",
  "PyYAML>=6.0",
  "readchar>=4.0",
  "pydub>=0.25.1",
  "pyparsing>=3.0",
  "msgpack>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "mypy==1.8.0",
    "black==24.1.0",
    "ruff==0.5.12",
    "pyupgrade>=3.4.1",
    "PyYAML>=6.0",
    "types-PyYAML>=6.0",
    "jinja2>=3.1",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
strict = true
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.format]
exclude = [
    "ai/v9.py",
    "auto/goap_engine.py",
    "auto/gui/gui_widgets.py",
    "auto/gui/main_window.py",
    "auto/gui/worker.py",
    "auto/main.py",
    "auto/simulation.py",
    "engine/render_entities.py",
    "game/systems/pathfinding/flowfield.py",
]

[[tool.mypy.overrides]]
module = [
    "joblib.*",
    "msgpack.*",
    "pydub.*",
    "scipy.*",
    "skimage.*",
    "tifffile.*",
]
ignore_missing_imports = true
follow_imports = "skip"
