[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-rl"
version = "0.1.0"
description = "Simulation-heavy roguelike/RPG research project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
  "polars>=0.20",
  "numba>=0.57",
  "scipy>=1.10",
  "scikit-image>=0.22",
  "joblib>=1.3",
  "pydantic>=2.0",
  "orjson>=3.8.0",
  "PySide6>=6.5",
  "PySDL2>=0.9.16",
  "pysdl2-dll>=2.30.0",
  "matplotlib>=3.7",
  "Pillow>=9.2",
  "structlog>=23.1",
  "PyYAML>=6.0",
  "readchar>=4.0",
  "pydub>=0.25.1",
  "pyparsing>=3.0",
  "msgpack>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "mypy==1.8.0",
    "black==24.1.0",
    "ruff==0.5.12",
    "pyupgrade>=3.4.1",
    "PyYAML>=6.0",
    "types-PyYAML>=6.0",
    "jinja2>=3.1",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
strict = true
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.format]
exclude = [
    "ai/v9.py",
    "auto/goap_engine.py",
    "auto/gui/gui_widgets.py",
    "auto/gui/main_window.py",
    "auto/gui/worker.py",
    "auto/main.py",
    "auto/simulation.py",
    "engine/render_entities.py",
    "game/systems/pathfinding/flowfield.py",
]

[[tool.mypy.overrides]]
module = [
    "joblib.*",
    "msgpack.*",
    "numba.*",
    "pydub.*",
    "scipy.*",
    "skimage.*",
    "tifffile.*",
]
ignore_missing_imports = true
follow_imports = "skip"


# Temporary audit burn-down list for modules with historical strict-typing debt.
# Remove entries one module at a time as focused typing fixes land.
[[tool.mypy.overrides]]
module = [
    "Dungeon.core",
    "Dungeon.processor",
    "Dungeon.shaper",
    "ai.v9",
    "auto.goap_engine",
    "auto.gui.gui_widgets",
    "auto.gui.main_window",
    "auto.gui.worker",
    "auto.main",
    "auto.simulation",
    "bench.bench_fov",
    "engine.action_handler",
    "engine.main_loop",
    "engine.render_base_layers",
    "engine.render_entities",
    "engine.render_lighting",
    "engine.renderer",
    "engine.window_manager",
    "engine.window_manager_modules.input_handler",
    "engine.window_manager_modules.tileset_manager",
    "engine.window_manager_modules.ui_overlay_manager",
    "game.ai",
    "game.ai.bird",
    "game.ai.community",
    "game.ai.community_adapter",
    "game.ai.goap",
    "game.ai.goap_adapter",
    "game.ai.insect",
    "game.ai.mammal",
    "game.ai.ml_policy",
    "game.ai.perception",
    "game.ai.plant",
    "game.ai.reptile",
    "game.ai.simple",
    "game.ai.strategy",
    "game.audio.synthesis",
    "game.effects.executor",
    "game.effects.handlers",
    "game.entities.components",
    "game.entities.registry",
    "game.game_state",
    "game.items.registry",
    "game.perception",
    "game.skills.system",
    "game.systems.ai_system",
    "game.systems.combat_system",
    "game.systems.equipment_system",
    "game.systems.magic_system_skill_integration",
    "game.systems.pathfinding.flowfield",
    "game.systems.sound",
    "game.ui.skill_training_dialog",
    "game.world.fov",
    "game.world.game_map",
    "game.world.los",
    "game.world.procgen",
    "magic.bf_backend",
    "magic.brainfuck_numba",
    "magic.executor",
    "magic.models",
    "orchestrator",
    "scripts.generate_glyphs",
    "scripts.run_auto_regression",
    "skills.cross_training",
    "skills.effects",
    "skills.milestones",
    "skills.models",
    "skills.prerequisites",
    "skills.progression",
    "skills.registry_integration",
    "skills.shapeshifting",
    "skills.system",
    "skills.utils",
    "tests.test_fov",
    "tools.lighting_fov_tool.exporter",
    "tools.lighting_fov_tool.scene",
    "tools.lighting_fov_tool.tile_config",
    "tools.lighting_fov_tool.tool_window",
    "tools.play_from_arrow",
    "tools.sample_variants",
    "utils.core",
    "utils.game_rng",
    "utils.shaped_map",
    "worldgen",
    "worldgen.hydrology",
    "worldgen.io",
    "worldgen.kernels.advection",
    "worldgen.kernels.erosion",
    "worldgen.kernels.geometry",
    "worldgen.kernels.heap",
    "worldgen.kernels.noise",
    "worldgen.kernels.smoothing",
    "worldgen.kernels.union_find",
    "worldgen.metadata",
    "worldgen.report",
    "worldgen.topology_cube_sphere",
    "worldgen.utils_coord",
    "worldgen.validation",
]
ignore_errors = true
